new dss calc job implemented. this job can handle measures for the rrm and merge them with the original model data to generate a new calc case.